// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot primary 1`] = `
<div>
  <button
    class=" dse-button dse-button--primary"
  >
    <p
      class="dse-text dse-text-base"
    >
      Button
    </p>
  </button>
</div>
`;

exports[`Snapshot with icon 1`] = `
<div>
  <button
    class=" dse-button dse-button--primary"
  >
    <svg
      aria-hidden="true"
      class=" dse-width-sm dse-height-sm"
      data-testid="DseIcon"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5 8.25l-7.5 7.5-7.5-7.5"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <p
      class="dse-text dse-text-base"
    >
      Button
    </p>
  </button>
</div>
`;
